Fix small spacing issue between cards

--- a/projects/packages/my-jetpack/_inc/components/my-jetpack-screen/styles.module.scss
+++ b/projects/packages/my-jetpack/_inc/components/my-jetpack-screen/styles.module.scss
@@ -90,5 +90,5 @@
 }
 
 .stats {
-	margin-bottom: -2rem;
+	margin-bottom: -1.5rem;
 }
